--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ wildfly-qwanda-service:
     - ADMIN_USERNAME=admin
     - ADMIN_PASSWORD=password
     - CORS_ALLOWED_ORIGINS="https://genny.outcome-hub.com,http://qwanda-service.outcome-hub.com,https://qwanda-service.outcome-hub.com,http://localhost:58080,http://localhost:3000,http://localhost:5000,http://localhost:8998"
+    - HOSTIP=192.168.64.6
   ports:
     - "8998:8998"
     - "50293:50293"
