--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ wildfly-qwanda-service:
   image: gennyproject/wildfly-qwanda-service:latest 
   links:
     - gennydb:gennydb
+  env_file:
+    - ${ENV_FILE}
   environment:
     - MYSQL_PORT_3306_TCP_ADDR=gennydb
     - MYSQL_PORT_3306_TCP_PORT=3306
@@ -26,7 +28,6 @@ wildfly-qwanda-service:
     - ADMIN_USERNAME=admin
     - ADMIN_PASSWORD=password
     - CORS_ALLOWED_ORIGINS="https://genny.outcome-hub.com,http://qwanda-service.outcome-hub.com,https://qwanda-service.outcome-hub.com,http://localhost:58080,http://localhost:3000,http://localhost:5000,http://localhost:8998"
-    - HOSTIP=10.1.1.83
   ports:
     - "8998:8998"
     - "50293:50293"
