--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,12 @@
 
-gennydb:
+mysql:
   image: mariadb
   environment:
+    - MYSQL_URL=mysql
+    - MYSQL_DB=gennydb
+    - MYSQL_PORT=3306
+    - MYSQL_ALLOW_EMPTY=
+    - MYSQL_RANDOM_ROOT_PASSWORD=no
     - MYSQL_DATABASE=gennydb
     - MYSQL_USER=genny
     - MYSQL_PASSWORD=password
@@ -13,16 +18,18 @@ gennydb:
    
 
 
-wildfly-qwanda-service:
+qwanda-service:
   image: gennyproject/wildfly-qwanda-service:latest 
   links:
-    - gennydb:gennydb
-  env_file:
-    - ${ENV_FILE}
+    - mysql:mysql
   environment:
-    - MYSQL_PORT_3306_TCP_ADDR=gennydb
-    - MYSQL_PORT_3306_TCP_PORT=3306
+    - MYSQL_URL=mysql
     - MYSQL_DATABASE=gennydb
+    - MYSQL_ROOT_PASSWORD=password
+    - MYSQL_ALLOW_EMPTY=
+    - MYSQL_RANDOM_ROOT_PASSWORD=no
+    - MYSQL_DB=gennydb
+    - MYSQL_PORT=3306
     - MYSQL_USER=genny
     - MYSQL_PASSWORD=password
     - ADMIN_USERNAME=admin
