--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -76,7 +76,7 @@
 			<url-pattern>/qwanda/*</url-pattern>
 		</web-resource-collection>
 	<auth-constraint>
-        <role-name>admin</role-name>
+        <role-name>user</role-name>
     </auth-constraint>
 	</security-constraint>
 	
