--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,7 @@
 		</init-param>
 		<init-param>
 			<param-name>swagger.api.basepath</param-name>
-			<param-value>http://localhost:58080/</param-value>
+			<param-value>/</param-value>
 		</init-param>
 		<load-on-startup>2</load-on-startup>
 	</servlet>
