--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 			<id>JBoss repository</id>
 			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
 		</repository>
+		<repository>
+			<id>outcomelife</id>
+			<url>https://nexus.outcome-hub.com/nexus/content/repositories/outcomelife</url>
+		</repository>
+
 	</repositories>
 	<dependencies>
 		<dependency>
