--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 
 	<repositories>
 		<repository>
-			<id>outcomelife</id>
+			<id>Genny-Project</id>
 			<url>https://nexus.outcome-hub.com/nexus/content/repositories/outcomelife</url>
 		</repository>
 		<repository>
