--- a/DockerfileJRebel
+++ b/DockerfileJRebel
@@ -35,6 +35,9 @@ EXPOSE 8998
 EXPOSE 8787
 
 ADD docker-entrypoint4.sh /opt/jboss/
+
+HEALTHCHECK --interval=10s --timeout=3s --retries=15 CMD curl -f / http://localhost:8080/version || exit 1
+
 ENTRYPOINT [ "/opt/jboss/docker-entrypoint4.sh" ]
 CMD ["-b", "0.0.0.0"]
 
