--- a/.drone.yml
+++ b/.drone.yml
@@ -2,7 +2,7 @@ pipeline:
   build:
     image: maven:3.5.0-jdk-8
     commands:
-      - mvn clean package
+      - mvn -Dmaven.wagon.http.ssl.insecure=true clean package
 
   push-docker:
     image: plugins/docker
