--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<properties>
 		<qwanda.version>0.5.5</qwanda.version>
 		<qwanda-utils.version>0.4</qwanda-utils.version>
+		<qwanda-services.version>0.0.1-SNAPSHOT</qwanda-services.version>
 		<version.wildfly-swarm>2017.7.0-SNAPSHOT</version.wildfly-swarm>
 		<version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
 
@@ -65,6 +66,11 @@
 			<groupId>life.genny</groupId>
 			<artifactId>qwanda-utils</artifactId>
 			<version>${qwanda-utils.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>life.genny</groupId>
+			<artifactId>qwanda-services</artifactId>
+			<version>${qwanda-services.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
