--- a/DockerfileJRebel
+++ b/DockerfileJRebel
@@ -14,6 +14,7 @@ ENV PROJECT wildfly-qwanda-service
 ADD target/$PROJECT $JBOSS_HOME/standalone/deployments/$PROJECT.war
 ADD gennyCredentials /root/.credentials/sheets.googleapis.com-java-quickstart/StoredCredential
 ADD gennyCredentials /root/.credentials/genny/StoredCredential
+ADD gennyC /root/.credentials/sheets.googleapis.com-java-quickstart/StoredCredential
 ADD channel /root/.credentials/channel/StoredCredential
 RUN touch $JBOSS_HOME/standalone/deployments/$PROJECT.war.dodeploy
 USER root
