--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,21 @@
 	<name>wildfly-qwanda-service</name>
 	<url>http://genny.life</url>
 
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<distribution>repo</distribution>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+		</license>
+	</licenses>
+
 	<properties>
 		<qwanda.version>0.5.5</qwanda.version>
 		<qwanda-utils.version>0.4</qwanda-utils.version>
 		<qwanda-services.version>0.0.1-SNAPSHOT</qwanda-services.version>
-		
+
+		<version.org.wildfly>10.1.0.Final</version.org.wildfly>
+
 		<version.wildfly-swarm>2017.7.0-SNAPSHOT</version.wildfly-swarm>
 		<version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
 
@@ -49,12 +59,16 @@
 		<version.resteasy>3.0.10.Final</version.resteasy>
 		<version.slf4j>1.7.21</version.slf4j>
 		<version.swagger>1.5.16</version.swagger>
+
+		<version.org.jboss.arquillian>1.1.5.Final</version.org.jboss.arquillian>
+		<version.org.wildfly>8.2.1.Final</version.org.wildfly>
+		<version.junit>4.12</version.junit>
 	</properties>
 
 	<repositories>
 		<repository>
 			<id>life.genny</id>
-			<url>https://nexus.outcome-hub.com/nexus/content/repositories/life.genny</url>
+			<url>http://nexus.outcome-hub.com/nexus/content/repositories/life.genny</url>
 		</repository>
 		<repository>
 			<id>JBoss repository</id>
@@ -277,8 +291,57 @@
 			<artifactId>jackson-jaxrs</artifactId>
 			<version>1.9.13</version>
 		</dependency>
+		<!-- JUnit regression testing framework. -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.arquillian.junit</groupId>
+			<artifactId>arquillian-junit-container</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.arquillian.protocol</groupId>
+			<artifactId>arquillian-protocol-servlet</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
+
+	<dependencyManagement>
+
+		<dependencies>
+			<!-- JUnit regression testing framework. -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${version.junit}</version>
+			</dependency>
+
+			<!-- Arquillian BOM (Bill Of Materials). -->
+			<dependency>
+				<groupId>org.jboss.arquillian</groupId>
+				<artifactId>arquillian-bom</artifactId>
+				<version>${version.org.jboss.arquillian}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+
+			<!-- https://mvnrepository.com/artifact/org.wildfly.bom/wildfly-javaee7 -->
+			<dependency>
+				<groupId>org.wildfly.bom</groupId>
+				<artifactId>wildfly-javaee7</artifactId>
+				<version>10.1.0.Final</version>
+				<type>pom</type>
+			</dependency>
+
+		</dependencies>
+	</dependencyManagement>
+
 	<build>
 		<resources>
 			<resource>
@@ -471,7 +534,122 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20.1</version>
+				<configuration>
+					<!-- Fork every test because it will launch a separate AS instance -->
+					<forkMode>always</forkMode>
+					<systemPropertyVariables>
+						<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+						<!-- the maven dependency plugin will have already downloaded the server 
+							on /target -->
+						<jboss.home>${project.basedir}/target/wildfly-10.1.0.Final</jboss.home>
+						<module.path>${project.basedir}/target/wildfly-10.1.0.Final/modules</module.path>
+					</systemPropertyVariables>
+					<redirectTestOutputToFile>false</redirectTestOutputToFile>
+				</configuration>
+			</plugin>  			<!--This plugin's configuration is used to store Eclipse m2e settings only. 
+				It has no influence on the Maven build itself. -->
+			<plugin>
+				<groupId>org.eclipse.m2e</groupId>
+				<artifactId>lifecycle-mapping</artifactId>
+				<version>1.0.0</version>
+				<configuration>
+					<lifecycleMappingMetadata>
+						<pluginExecutions>
+							<pluginExecution>
+								<pluginExecutionFilter>
+									<groupId>
+										org.apache.maven.plugins
+									</groupId>
+									<artifactId>
+										maven-dependency-plugin
+									</artifactId>
+									<versionRange>
+										[2.1,)
+									</versionRange>
+									<goals>
+										<goal>unpack</goal>
+									</goals>
+								</pluginExecutionFilter>
+								<action>
+									<ignore></ignore>
+								</action>
+							</pluginExecution>
+						</pluginExecutions>
+					</lifecycleMappingMetadata>
+				</configuration>
+			</plugin>
 		</plugins>
 		<finalName>${project.name}</finalName>
 	</build>
+
+	<profiles>
+
+		<!-- Arquillian WildFly managed profile -->
+		<profile>
+			<id>arq-wildfly-managed</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.wildfly</groupId>
+					<artifactId>wildfly-arquillian-container-managed</artifactId>
+					<version>8.2.0.Final</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+			<build>
+				<testResources>
+					<testResource>
+						<directory>src/test/resources</directory>
+					</testResource>
+				</testResources>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>unpack</id>
+								<phase>process-test-classes</phase>
+								<goals>
+									<goal>unpack</goal>
+								</goals>
+								<configuration>
+									<artifactItems>
+										<artifactItem>
+											<groupId>org.wildfly</groupId>
+											<artifactId>wildfly-dist</artifactId>
+											<version>8.2.0.Final</version>
+											<type>zip</type>
+											<overWrite>true</overWrite>
+											<outputDirectory>${project.build.directory}</outputDirectory>
+										</artifactItem>
+									</artifactItems>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<!-- Arquillian WildFly remote profile -->
+		<profile>
+			<id>arq-widlfly-remote</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.wildfly</groupId>
+					<artifactId>wildfly-arquillian-container-remote</artifactId>
+					<version>${version.org.wildfly}</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+
+	</profiles>
 </project>
