--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,14 +2,20 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
 	
+	  <display-name>qwanda-service</display-name>
+  <session-config>
+    <session-timeout>30</session-timeout>
+  </session-config>
+  <mime-mapping>
+    <extension>ico</extension>
+    <mime-type>image/x-icon</mime-type>
+  </mime-mapping>
+  
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 	
-<!-- 	<context-param>
-		<param-name>resteasy.media.type.mappings</param-name>
-		<param-value>json : application/json, xml : application/xml</param-value>
-	</context-param> -->
+
 	
  	<context-param>
         <param-name>keycloak.config.resolver</param-name>
