--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>life.genny</groupId>
 	<artifactId>wildfly-qwanda-service</artifactId>
 	<packaging>war</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.8</version>
 	<name>wildfly-qwanda-service</name>
 	<url>http://genny.life</url>
 
@@ -19,9 +19,9 @@
 	</licenses>
 
 	<properties>
-		<qwanda.version>0.5.7</qwanda.version>
-		<qwanda-utils.version>0.6</qwanda-utils.version>
-		<qwanda-services.version>0.6</qwanda-services.version>
+		<qwanda.version>0.8</qwanda.version>
+		<qwanda-utils.version>0.8</qwanda-utils.version>
+		<qwanda-services.version>0.8</qwanda-services.version>
 
 		<version.org.wildfly>10.1.0.Final</version.org.wildfly>
 
@@ -68,7 +68,7 @@
 	</properties>
 
 	<repositories>
-		<repository>
+<!--		<repository>
 			<id>life.genny</id>
 			<url>http://nexus.outcome-hub.com/nexus/content/repositories/life.genny</url>
 		</repository>
@@ -76,7 +76,7 @@
 			<id>JBoss repository</id>
 			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
 		</repository>
-
+-->
 	</repositories>
 	<dependencies>
 		<dependency>
