Added .project to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ jboss/server/minimal/work/**/*
 /src/main/resources/git.properties
 src/main/resources/rebel.xml
 # deployed package files #
-
+.project
 *.DEPLOYED
 /target/
 
