--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 			<scope>compile</scope>
 		</dependency>
 
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast</artifactId>
 			<version>3.9.3</version>
@@ -114,7 +114,7 @@
 			<artifactId>hazelcast-client</artifactId>
 			<version>3.9.3</version>
 		</dependency>
-		
+		 -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
