--- a/pom.xml
+++ b/pom.xml
@@ -58,44 +58,60 @@
 		<version.org.wildfly>12.0.0.Final</version.org.wildfly>
 		<version.junit>4.12</version.junit>
 
-		<vertx.version>3.4.2</vertx.version>
+		<hazelcast.version>3.9.3</hazelcast.version>
 	</properties>
 
 	<repositories>
-            
-			<repository> <id> Maven repository</id> <url>https://mvnrepository.com/artifact/org.wildfly.arquillian/wildfly-arquillian-container-managed/</url> 
-			</repository> 
-			<repository> <id> Maven repository2</id> <url>https://mvnrepository.com/artifact/org.wildfly/wildfly-dist/</url> 
-			</repository> 
-			<repository> <id> Maven repository3</id> <url>https://mvnrepository.com/artifact/org.jboss.logging/jboss-logging/</url> 
-			</repository> 
-			<repository> <id> Maven repository4</id> <url>https://mvnrepository.com/artifact/org.jboss.remoting/jboss-remoting/</url> 
-			</repository> 
-			<repository> <id> Maven repository5</id> <url>https://mvnrepository.com/artifact/org.wildfly.common/wildfly-common/</url> 
-			</repository> 
-			<repository> <id> Maven repository6</id> <url>https://mvnrepository.com/artifact/org.jboss.xnio/xnio-api/</url> 
-			</repository> 
-			<repository> <id>JBoss repository</id> <url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url> 
-			</repository> 
-		 <repository> <id>life.genny</id> <url>http://nexus.outcome-hub.com/nexus/content/repositories/life.genny</url> 
-			</repository> 
+
+		<repository>
+			<id> Maven repository</id>
+			<url>https://mvnrepository.com/artifact/org.wildfly.arquillian/wildfly-arquillian-container-managed/</url>
+		</repository>
+		<repository>
+			<id> Maven repository2</id>
+			<url>https://mvnrepository.com/artifact/org.wildfly/wildfly-dist/</url>
+		</repository>
+		<repository>
+			<id> Maven repository3</id>
+			<url>https://mvnrepository.com/artifact/org.jboss.logging/jboss-logging/</url>
+		</repository>
+		<repository>
+			<id> Maven repository4</id>
+			<url>https://mvnrepository.com/artifact/org.jboss.remoting/jboss-remoting/</url>
+		</repository>
+		<repository>
+			<id> Maven repository5</id>
+			<url>https://mvnrepository.com/artifact/org.wildfly.common/wildfly-common/</url>
+		</repository>
+		<repository>
+			<id> Maven repository6</id>
+			<url>https://mvnrepository.com/artifact/org.jboss.xnio/xnio-api/</url>
+		</repository>
+		<repository>
+			<id>JBoss repository</id>
+			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
+		</repository>
+		<repository>
+			<id>life.genny</id>
+			<url>http://nexus.outcome-hub.com/nexus/content/repositories/life.genny</url>
+		</repository>
 	</repositories>
 	<dependencies>
-<!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-ejb-client-bom -->
-<dependency>
-    <groupId>org.wildfly</groupId>
-    <artifactId>wildfly-ejb-client-bom</artifactId>
-    <version>12.0.0.Final</version>
-    <type>pom</type>
-</dependency>
+		<!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-ejb-client-bom -->
+		<dependency>
+			<groupId>org.wildfly</groupId>
+			<artifactId>wildfly-ejb-client-bom</artifactId>
+			<version>12.0.0.Final</version>
+			<type>pom</type>
+		</dependency>
 
-<!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-jms-client-bom -->
-<dependency>
-    <groupId>org.wildfly</groupId>
-    <artifactId>wildfly-jms-client-bom</artifactId>
-    <version>12.0.0.Final</version>
-    <type>pom</type>
-</dependency>
+		<!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-jms-client-bom -->
+		<dependency>
+			<groupId>org.wildfly</groupId>
+			<artifactId>wildfly-jms-client-bom</artifactId>
+			<version>12.0.0.Final</version>
+			<type>pom</type>
+		</dependency>
 
 		<dependency>
 			<groupId>life.genny</groupId>
@@ -104,17 +120,17 @@
 			<scope>compile</scope>
 		</dependency>
 
-<!-- 		<dependency>
+		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast</artifactId>
-			<version>3.9.3</version>
+			<version>${hazelcast.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast-client</artifactId>
-			<version>3.9.3</version>
+			<version>${hazelcast.version}</version>
 		</dependency>
-		 -->
+
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -151,7 +167,7 @@
 			<version>2.1</version>
 		</dependency>
 
- 		<dependency>
+		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 			<version>1.6.1</version>
@@ -322,11 +338,6 @@
 			<artifactId>arquillian-protocol-servlet</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency> <groupId>io.vertx</groupId> <artifactId>vertx-core</artifactId> 
-			<version>${vertx.version}</version> </dependency> <dependency> <groupId>io.vertx</groupId> 
-			<artifactId>vertx-hazelcast</artifactId> <version>${vertx.version}</version> 
-			</dependency> <dependency> <groupId>io.vertx</groupId> <artifactId>vertx-jca-api</artifactId> 
-			<version>${vertx.version}</version> </dependency> -->
 
 		<dependency>
 			<groupId>org.jboss.weld</groupId>
@@ -339,30 +350,30 @@
 			<artifactId>weld-spi</artifactId>
 			<version>3.0.Final</version>
 		</dependency>
-<!-- https://mvnrepository.com/artifact/org.jboss.logging/jboss-logging -->
-<dependency>
-    <groupId>org.jboss.logging</groupId>
-    <artifactId>jboss-logging</artifactId>
-    <version>3.3.1.Final</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.jboss.remoting/jboss-remoting -->
-<dependency>
-    <groupId>org.jboss.remoting</groupId>
-    <artifactId>jboss-remoting</artifactId>
-    <version>5.0.5.Final</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.wildfly.common/wildfly-common -->
-<dependency>
-    <groupId>org.wildfly.common</groupId>
-    <artifactId>wildfly-common</artifactId>
-    <version>1.2.0.Final</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.jboss.xnio/xnio-api -->
-<dependency>
-    <groupId>org.jboss.xnio</groupId>
-    <artifactId>xnio-api</artifactId>
-    <version>3.5.4.Final</version>
-</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jboss.logging/jboss-logging -->
+		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging</artifactId>
+			<version>3.3.1.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jboss.remoting/jboss-remoting -->
+		<dependency>
+			<groupId>org.jboss.remoting</groupId>
+			<artifactId>jboss-remoting</artifactId>
+			<version>5.0.5.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.wildfly.common/wildfly-common -->
+		<dependency>
+			<groupId>org.wildfly.common</groupId>
+			<artifactId>wildfly-common</artifactId>
+			<version>1.2.0.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jboss.xnio/xnio-api -->
+		<dependency>
+			<groupId>org.jboss.xnio</groupId>
+			<artifactId>xnio-api</artifactId>
+			<version>3.5.4.Final</version>
+		</dependency>
 
 	</dependencies>
 
@@ -636,11 +647,11 @@
 					</lifecycleMappingMetadata>
 				</configuration>
 			</plugin>
-<plugin>
-                <groupId>org.wildfly.plugins</groupId>
-                <artifactId>wildfly-maven-plugin</artifactId>
-                <version>1.2.1.Final</version>
-            </plugin>
+			<plugin>
+				<groupId>org.wildfly.plugins</groupId>
+				<artifactId>wildfly-maven-plugin</artifactId>
+				<version>1.2.1.Final</version>
+			</plugin>
 		</plugins>
 		<finalName>${project.name}</finalName>
 	</build>
@@ -654,13 +665,13 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<dependencies>
-<!-- https://mvnrepository.com/artifact/org.wildfly.arquillian/wildfly-arquillian-container-managed -->
-<dependency>
-    <groupId>org.wildfly.arquillian</groupId>
-    <artifactId>wildfly-arquillian-container-managed</artifactId>
-    <version>2.1.0.Final</version>
-    <scope>test</scope>
-</dependency>
+				<!-- https://mvnrepository.com/artifact/org.wildfly.arquillian/wildfly-arquillian-container-managed -->
+				<dependency>
+					<groupId>org.wildfly.arquillian</groupId>
+					<artifactId>wildfly-arquillian-container-managed</artifactId>
+					<version>2.1.0.Final</version>
+					<scope>test</scope>
+				</dependency>
 
 			</dependencies>
 			<build>
