Added dev to security users. Updated search count

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -97,7 +97,9 @@
 	<security-role>
 		<role-name>user</role-name>
 	</security-role>
-	
+		<security-role>
+		<role-name>dev</role-name>
+	</security-role>
   
 	
 </web-app>
