--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -87,6 +87,13 @@
 	</security-constraint>
 	
 
+	<security-constraint>
+		<web-resource-collection>
+		<web-resource-name>Qwanda Service</web-resource-name>
+			<url-pattern>/utils/*</url-pattern>
+		</web-resource-collection>
+	
+	</security-constraint>
 	<login-config>
 		<auth-method>KEYCLOAK</auth-method>
 	</login-config>
