--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 			<url>https://mvnrepository.com/artifact/org.wildfly.arquillian/wildfly-arquillian-container-managed/</url>
 		</repository>
 		<repository>
-			<id> Maven repository</id>
+			<id> Apache repository</id>
 			<url>https://mvnrepository.com/artifact/org.apache.commons/commons-lang3</url>
 		</repository>
 		<repository>
