--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -105,6 +105,14 @@
 		</web-resource-collection>
 	
 	</security-constraint>
+
+	<security-constraint>
+		<web-resource-collection>
+		<web-resource-name>Qwanda Service</web-resource-name>
+			<url-pattern>/keycloak/*</url-pattern>
+		</web-resource-collection>
+	
+	</security-constraint>	
 	<login-config>
 		<auth-method>KEYCLOAK</auth-method>
 	</login-config>
