--- a/pom.xml
+++ b/pom.xml
@@ -455,6 +455,24 @@
 				</configuration>
 			</plugin>
 			<plugin>
+        <artifactId>maven-war-plugin</artifactId>
+    	<version>2.1.1</version>
+        <configuration>
+          <!-- Optionally specify where the web.xml file comes from -->
+          <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+          <!-- Optionally specify extra resources to include -->
+          <webResources>
+            <resource>
+              <directory>${project.basedir}</directory>
+              <targetPath>WEB-INF/classes</targetPath>
+              <includes>
+                <include>pom.xml</include>
+              </includes>
+            </resource>
+          </webResources>
+        </configuration>
+      </plugin>
+			<plugin>
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
 				<version>2.2.3</version>
@@ -466,7 +484,7 @@
 						</goals>
 						<configuration>
 							<generateGitPropertiesFile>true</generateGitPropertiesFile>
-							<generateGitPropertiesFilename>target/classes/git.properties</generateGitPropertiesFilename>
+							<generateGitPropertiesFilename>target/classes/${project.name}-git.properties</generateGitPropertiesFilename>
 							<!-- If you'd like to tell the plugin where your .git directory is, 
 								use this setting, otherwise we'll perform a search trying to figure out the 
 								right directory. It's better to add it explicite IMHO. -->
@@ -504,7 +522,7 @@
 							<generateGitPropertiesFile>true</generateGitPropertiesFile>
 							<!-- The path for the to be generated properties file, it's relative 
 								to ${project.basedir} -->
-							<generateGitPropertiesFilename>src/main/resources/git.properties</generateGitPropertiesFilename>
+							<generateGitPropertiesFilename>src/main/resources/${project.name}-git.properties</generateGitPropertiesFilename>
 
 							<!-- Denotes the format to save properties in. Valid options are "properties" 
 								(default) and "json". Properties will be saved to the generateGitPropertiesFilename 
