--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -7,15 +7,15 @@
 	<groupId>life.genny</groupId>
 	<artifactId>qwanda-service-war</artifactId>
 	<packaging>war</packaging>
-    <version>${revision}</version>
+	<version>${revision}</version>
 	<name>qwanda-service-war</name>
 	<url>http://genny.life</url>
 
 	<parent>
 		<groupId>life.genny</groupId>
 		<artifactId>wildfly-qwanda-service</artifactId>
-        <version>${revision}</version>
-    </parent>
+		<version>${revision}</version>
+	</parent>
 
 	<licenses>
 		<license>
@@ -29,10 +29,10 @@
 		<ear.name>z-ear.ear</ear.name>
 		<rar.name>vertx-jca-adapter</rar.name>
 		<rar.version>3.5.1</rar.version>
-        <rar.file.name>${rar.name}-${rar.version}.rar</rar.file.name>
-        <vertx.version>3.5.1</vertx.version>
+		<rar.file.name>${rar.name}-${rar.version}.rar</rar.file.name>
+		<vertx.version>3.5.1</vertx.version>
 
-		<qwanda-services.version>1.0.60</qwanda-services.version>
+		<qwanda-services.version>1.0.62</qwanda-services.version>
 
 		<version.org.wildfly>14.0.1.Final</version.org.wildfly>
 
@@ -147,7 +147,7 @@
 			<artifactId>vertx-jca-adapter</artifactId>
 			<version>${vertx.version}</version>
 			<type>rar</type>
-        </dependency>
+		</dependency>
 
 
 
@@ -172,32 +172,34 @@
 			<artifactId>qwanda-services</artifactId>
 			<version>${qwanda-services.version}</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.hazelcast</groupId>
+					<artifactId>hazelcast</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>io.vertx</groupId>
+					<artifactId>vertx-hazelcast</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.hazelcast</groupId>
+					<artifactId>hazelcast-client</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-jsf -->
 		<dependency>
 			<groupId>org.wildfly</groupId>
 			<artifactId>wildfly-jsf</artifactId>
 			<version>${version.org.wildfly}</version>
 		</dependency>
-	<dependency>
-    <groupId>javax.cache</groupId>
-    <artifactId>cache-api</artifactId>
-    <version>1.0.0-PFD</version>
-</dependency>	
-
-        <!-->
-<dependency>
-    <groupId>com.hazelcast</groupId>
-        <artifactId>hazelcast</artifactId>
-            <version>${hazelcast.version}</version>
-            </dependency>
-<dependency>
-    <groupId>com.hazelcast</groupId>
-        <artifactId>hazelcast-client</artifactId>
-            <version>${hazelcast.version}</version>
-            </dependency>
-        </!-->
+		<!-- <dependency> <groupId>javax.cache</groupId> <artifactId>cache-api</artifactId> 
+			<version>${javax-cache.version}</version> </dependency> -->
+		<!--> <dependency> <groupId>com.hazelcast</groupId> <artifactId>hazelcast</artifactId> 
+			<version>${hazelcast.version}</version> </dependency> <dependency> <groupId>com.hazelcast</groupId> 
+			<artifactId>hazelcast-client</artifactId> <version>${hazelcast.version}</version> 
+			</dependency> </! -->
 
 		<dependency>
 			<groupId>commons-io</groupId>
