--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -148,6 +148,17 @@
 			<version>${vertx.version}</version>
 			<type>rar</type>
         </dependency>
+        <dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>0.9.28</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>0.9.28</version>
+		</dependency>
 
 
 
