--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -32,7 +32,7 @@
         <rar.file.name>${rar.name}-${rar.version}.rar</rar.file.name>
         <vertx.version>3.5.1</vertx.version>
 
-		<qwanda-services.version>1.0.64</qwanda-services.version>
+		<qwanda-services.version>1.0.65</qwanda-services.version>
 
 		<version.org.wildfly>14.0.1.Final</version.org.wildfly>
 
@@ -56,8 +56,8 @@
 		<project.oauth.version>1.19.0</project.oauth.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<version.jboss.bom>13.0.0.Final</version.jboss.bom>
-		<drools.version>6.4.0.Final</drools.version>
-		<jbpm.version>6.4.0.Final</jbpm.version>
+		<drools.version>7.1.0.Final</drools.version>
+		<jbpm.version>7.1.0.Final</jbpm.version>
 		<keycloak-core.version>3.4.0.Final</keycloak-core.version>
 		<keycloak-adapter-core.version>3.4.0.Final</keycloak-adapter-core.version>
 
@@ -70,7 +70,7 @@
 		<version.junit>4.12</version.junit>
 
 		<hazelcast.version>3.8.2</hazelcast.version>
-		<javax-cache.version>1.1.0</javax-cache.version>
+		<javax-cache.version>1.0.0-PFD</javax-cache.version>
 	</properties>
 
 	<repositories>
