add hazelcast client in pom file

--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -181,6 +181,11 @@
 			<version>${version.org.wildfly}</version>
 		</dependency>
 		
+            <dependency>
+                <groupId>com.hazelcast</groupId>
+                <artifactId>hazelcast-client</artifactId>
+                <version>${hazelcast.version}</version>
+            </dependency>
 
         <!-->
 <dependency>
