--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -7,15 +7,15 @@
 	<groupId>life.genny</groupId>
 	<artifactId>qwanda-service-war</artifactId>
 	<packaging>war</packaging>
-    <version>${revision}</version>
+	<version>${revision}</version>
 	<name>qwanda-service-war</name>
 	<url>http://genny.life</url>
 
 	<parent>
 		<groupId>life.genny</groupId>
 		<artifactId>wildfly-qwanda-service</artifactId>
-        <version>${revision}</version>
-    </parent>
+		<version>${revision}</version>
+	</parent>
 
 	<licenses>
 		<license>
@@ -29,10 +29,12 @@
 		<ear.name>z-ear.ear</ear.name>
 		<rar.name>vertx-jca-adapter</rar.name>
 		<rar.version>3.5.1</rar.version>
-        <rar.file.name>${rar.name}-${rar.version}.rar</rar.file.name>
-        <vertx.version>3.5.1</vertx.version>
+		<rar.file.name>${rar.name}-${rar.version}.rar</rar.file.name>
+		<vertx.version>3.5.1</vertx.version>
 
 		<qwanda-services.version>1.0.65</qwanda-services.version>
+		<genny-verticle.version>1.0.65</genny-verticle.version>
+		
 
 		<version.org.wildfly>14.0.1.Final</version.org.wildfly>
 
@@ -147,7 +149,7 @@
 			<artifactId>vertx-jca-adapter</artifactId>
 			<version>${vertx.version}</version>
 			<type>rar</type>
-        </dependency>
+		</dependency>
 
 
 
@@ -173,31 +175,23 @@
 			<version>${qwanda-services.version}</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-jsf -->
 		<dependency>
 			<groupId>org.wildfly</groupId>
 			<artifactId>wildfly-jsf</artifactId>
 			<version>${version.org.wildfly}</version>
 		</dependency>
-	<dependency>
-    <groupId>javax.cache</groupId>
-    <artifactId>cache-api</artifactId>
-    <version>1.0.0-PFD</version>
-</dependency>	
+		<dependency>
+			<groupId>javax.cache</groupId>
+			<artifactId>cache-api</artifactId>
+			<version>1.0.0-PFD</version>
+		</dependency>
 
-        <!-->
-<dependency>
-    <groupId>com.hazelcast</groupId>
-        <artifactId>hazelcast</artifactId>
-            <version>${hazelcast.version}</version>
-            </dependency>
-<dependency>
-    <groupId>com.hazelcast</groupId>
-        <artifactId>hazelcast-client</artifactId>
-            <version>${hazelcast.version}</version>
-            </dependency>
-        </!-->
+		<!--> <dependency> <groupId>com.hazelcast</groupId> <artifactId>hazelcast</artifactId> 
+			<version>${hazelcast.version}</version> </dependency> <dependency> <groupId>com.hazelcast</groupId> 
+			<artifactId>hazelcast-client</artifactId> <version>${hazelcast.version}</version> 
+			</dependency> </! -->
 
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -257,7 +251,7 @@
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
-			<version>7.0</version>
+			<version>8.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-validator-provider-11 -->
@@ -459,6 +453,32 @@
 			<scope>provided</scope>
 		</dependency>
 
+	<dependency>
+		<groupId>com.hazelcast</groupId>
+		<artifactId>hazelcast-client</artifactId>
+		<version>${hazelcast.version}</version>
+	</dependency>
+	
+			<dependency>
+			<groupId>life.genny</groupId>
+			<artifactId>genny-verticle-rules</artifactId>
+			<version>${genny-verticle.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.hazelcast</groupId>
+					<artifactId>hazelcast</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>io.vertx</groupId>
+					<artifactId>vertx-hazelcast</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.hazelcast</groupId>
+					<artifactId>hazelcast-client</artifactId>
+				</exclusion>
+			</exclusions>
+
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
