Upgraded to 15.0.0.Final

--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -36,7 +36,7 @@
 		<genny-verticle.version>1.0.65</genny-verticle.version>
 		
 
-		<version.org.wildfly>14.0.1.Final</version.org.wildfly>
+		<version.org.wildfly>15.0.0.Final</version.org.wildfly>
 
 		<version.wildfly.maven.plugin>1.2.1.Final</version.wildfly.maven.plugin>
 
@@ -57,7 +57,7 @@
 		<project.http.version>1.19.0</project.http.version>
 		<project.oauth.version>1.19.0</project.oauth.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<version.jboss.bom>13.0.0.Final</version.jboss.bom>
+		<version.jboss.bom>15.0.0.Final</version.jboss.bom>
 		<drools.version>7.1.0.Final</drools.version>
 		<jbpm.version>7.1.0.Final</jbpm.version>
 		<keycloak-core.version>3.4.0.Final</keycloak-core.version>
@@ -157,7 +157,7 @@
 		<dependency>
 			<groupId>org.wildfly</groupId>
 			<artifactId>wildfly-ejb-client-bom</artifactId>
-			<version>14.0.1.Final</version>
+			<version>${version.org.wildfly}</version>
 			<type>pom</type>
 		</dependency>
 
@@ -165,7 +165,7 @@
 		<dependency>
 			<groupId>org.wildfly</groupId>
 			<artifactId>wildfly-jms-client-bom</artifactId>
-			<version>14.0.1.Final</version>
+			<version>${version.org.wildfly}</version>
 			<type>pom</type>
 		</dependency>
 
@@ -504,7 +504,7 @@
 			<dependency>
 				<groupId>org.wildfly.bom</groupId>
 				<artifactId>wildfly-javaee7</artifactId>
-				<version>14.0.1.Final</version>
+				<version>${version.org.wildfly}</version>
 				<type>pom</type>
 			</dependency>
 
