Updated to use EventBus directly rather than go through bridge

--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -800,7 +800,7 @@
 										<artifactItem>
 											<groupId>org.wildfly</groupId>
 											<artifactId>wildfly-dist</artifactId>
-											<version>14.0.1.Final</version>
+											<version>${version.org.wildfly}</version>
 											<type>zip</type>
 											<overWrite>true</overWrite>
 											<outputDirectory>${project.build.directory}</outputDirectory>
