Set swagger to only accept dev

--- a/qwanda-service-war/src/main/webapp/WEB-INF/web.xml
+++ b/qwanda-service-war/src/main/webapp/WEB-INF/web.xml
@@ -79,7 +79,7 @@
 	        <url-pattern>/api-docs/*</url-pattern>
 	    </web-resource-collection>
 	<auth-constraint>
-        <role-name>user</role-name>
+        <role-name>dev</role-name>
 
     </auth-constraint>
 	</security-constraint>
