--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -175,6 +175,12 @@
 			<version>${qwanda-services.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>life.genny</groupId>
+			<artifactId>qwanda-utils</artifactId>
+			<version>${qwanda-services.version}</version>
+			<scope>compile</scope>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-jsf -->
 		<dependency>
