Reverted back to v2.1.0 code

--- a/qwanda-service-war/genny.env
+++ b/qwanda-service-war/genny.env
@@ -1,22 +1,22 @@
-HOSTIP=internmatch
-DEVUSER=jayavaniswaminathan
+HOSTIP=10.1.1.127
+DEVUSER=helios
 
 GOOGLE_SHEETID=1VSXJUn8_BHG1aW0DQrFDnvLjx_jxcNiD33QzqO5D-jc
 GOOGLE_CLIENT_SECRET={"installed":{"client_id":"260075856207-9d7a02ekmujr2bh7i53dro28n132iqhe.apps.googleusercontent.com","project_id":"genny-sheets-181905","auth_uri":"https:\/\/accounts.google.com\/o\/oauth2\/auth","token_uri":"https:\/\/accounts.google.com\/o\/oauth2\/token","auth_provider_x509_cert_url":"https:\/\/www.googleapis.com\/oauth2\/v1\/certs","client_secret":"vgXEFRgQvh3_t_e5Hj-eb6IX","redirect_uris":["urn:ietf:wg:oauth:2.0:oob","http:\/\/localhost"]}}
 REACT_APP_PROJECT_NAME=Docker Genny
-REACT_APP_QWANDA_API_URL=http://internmatch:8280
+REACT_APP_QWANDA_API_URL=http://10.1.1.127:8280
 REACT_APP_VERSION_NUMBER=0.5
 REACT_APP_BUILD_DATE=2017-07-12
-REACT_BRIDGE_HOST=http://internmatch:8088
-REACT_APP_VERTX_URL=http://internmatch:8088/frontend
-REACT_APP_VERTX_SERVICE_API=http://internmatch:8088/api/service
-REACT_APP_VERTX_EVENTS_API=http://internmatch:8088/api/events
-REACT_APP_VERTX_CMDS_API=http://internmatch:8088/api/cmds
-REACT_APP_VERTX_DATA_API=http://internmatch:8088/api/data
+REACT_BRIDGE_HOST=http://10.1.1.127:8088
+REACT_APP_VERTX_URL=http://10.1.1.127:8088/frontend
+REACT_APP_VERTX_SERVICE_API=http://10.1.1.127:8088/api/service
+REACT_APP_VERTX_EVENTS_API=http://10.1.1.127:8088/api/events
+REACT_APP_VERTX_CMDS_API=http://10.1.1.127:8088/api/cmds
+REACT_APP_VERTX_DATA_API=http://10.1.1.127:8088/api/data
 
 KEYCLOAKPORT=8180
 KEYCLOAKPROTO=http://
-KEYCLOAKURL=http://internmatch:8180
+KEYCLOAKURL=http://10.1.1.127:8180
 KEYCLOAK_USERNAME=user1
 KEYCLOAK_SERVICE_ID=3f0c17d2-36f4-4b0d-8204-effadaedf4f2
 KEYCLOAK_PASSWORD=password1
@@ -33,7 +33,7 @@ MYSQL_ROOT_PASSWORD=password
 MYSQL_ALLOW_EMPTY=
 MYSQL_RANDOM_ROOT_PASSWORD=no
 RULES_DIR=/opt/rules
-KIE_SERVER=http://internmatch:8230/kie-server/services/rest/server
+KIE_SERVER=http://10.1.1.127:8230/kie-server/services/rest/server
 KIE_USERNAME=kieserver
 KIE_PASSWORD=kieserver1!
 FACEBOOK_CALLBACK_URL=https://social.outcome-hub.com
