--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -34,7 +34,7 @@
 
 		<qwanda-services.version>${revision}</qwanda-services.version>
 		<genny-verticle.version>${revision}</genny-verticle.version>
-		
+
 
 		<version.org.wildfly>15.0.1.Final</version.org.wildfly>
 
@@ -194,6 +194,11 @@
 			<version>1.0.0-PFD</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-jaxb-annotations</artifactId>
+			<version>2.9.8</version>
+		</dependency>
 		<!--> <dependency> <groupId>com.hazelcast</groupId> <artifactId>hazelcast</artifactId> 
 			<version>${hazelcast.version}</version> </dependency> <dependency> <groupId>com.hazelcast</groupId> 
 			<artifactId>hazelcast-client</artifactId> <version>${hazelcast.version}</version> 
@@ -459,15 +464,10 @@
 			<scope>provided</scope>
 		</dependency>
 
-        <!-->
-        <dependency>
-            <groupId>com.hazelcast</groupId>
-            <artifactId>hazelcast-client</artifactId>
-            <version>${hazelcast.version}</version>
-        </dependency>
-        </!-->
-	
-			<dependency>
+		<!--> <dependency> <groupId>com.hazelcast</groupId> <artifactId>hazelcast-client</artifactId> 
+			<version>${hazelcast.version}</version> </dependency> </! -->
+
+		<dependency>
 			<groupId>life.genny</groupId>
 			<artifactId>genny-verticle-rules</artifactId>
 			<version>${genny-verticle.version}</version>
