dependencies and check of true of false for online import

--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -74,6 +74,10 @@
 
 		<hazelcast.version>3.8.2</hazelcast.version>
 		<javax-cache.version>1.0.0-PFD</javax-cache.version>
+
+		<jxls.version>2.6.0</jxls.version>
+		<jxls-poi.version>1.2.0</jxls-poi.version>
+		<jxls-jexcel.version>1.0.9</jxls-jexcel.version>
 	</properties>
 
 	<repositories>
@@ -121,11 +125,32 @@
 			<artifactId>vertx-core</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.xmlbeans</groupId>
+			<artifactId>xmlbeans</artifactId>
+			<version>3.1.0</version>
+ 		</dependency>
         <dependency>
-        	<groupId>life.genny</groupId>
-        	<artifactId>bootxport</artifactId>
-        	<version>${revision}</version>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.193</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.19</version>
+		</dependency>
+		<dependency>
+			<groupId>life.genny</groupId>
+			<artifactId>bootxport</artifactId>
+			<version>${revision}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-compress</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 		<dependency>
 			<groupId>io.vertx</groupId>
@@ -181,12 +206,24 @@
 			<artifactId>qwanda-services</artifactId>
 			<version>${qwanda-services.version}</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-compress</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>life.genny</groupId>
 			<artifactId>qwanda-utils</artifactId>
 			<version>${qwanda-services.version}</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-compress</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -492,8 +529,11 @@
 					<groupId>com.hazelcast</groupId>
 					<artifactId>hazelcast-client</artifactId>
 				</exclusion>
-			</exclusions>
-
+				<exclusion>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-compress</artifactId>
+				</exclusion>
+            </exclusions>
 		</dependency>
 	</dependencies>
 
