--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ bin/**/*
 **/target/
 qwanda-service-war/src/main/resources/qwanda-service-war-git.properties
 ./qwanda-service-war/.externalToolBuilders/org.jboss.tools.jst.web.kb.kbbuilder.launch
+qwanda-service-war/.factorypath
