Upgraded a lot of versions

--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -46,7 +46,7 @@
 
 		<version.h2>1.4.195</version.h2>
 		<version.postgresql>9.4.1207</version.postgresql>
-		<version.mysql>6.0.6</version.mysql>
+		<version.mysql-connector-java>8.0.17</version.mysql-connector-java>
 
 		<version.jodatime>2.7</version.jodatime>
 
@@ -61,8 +61,7 @@
 
 		<drools.version>7.26.0.Final</drools.version>
 		<jbpm.version>7.26.0.Final</jbpm.version>
-		<keycloak-core.version>7.0.0</keycloak-core.version>
-		<keycloak-adapter-core.version>7.0.0</keycloak-adapter-core.version>
+		<version.keycloak>7.0.0</version.keycloak>
 
 		<version.ee7>1.0.2.Final</version.ee7>
 		<version.resteasy>3.0.10.Final</version.resteasy>
@@ -159,18 +158,8 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.spec</groupId>
-			<artifactId>jboss-javaee-6.0</artifactId>
-			<type>pom</type>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.jboss.ejb3</groupId>
 			<artifactId>jboss-ejb3-ext-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
@@ -309,7 +298,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.22</version>
+			<version>${version.mysql-connector-java}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.swagger</groupId>
@@ -319,13 +308,13 @@
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-adapter-core</artifactId>
-			<version>${keycloak-core.version}</version>
+			<version>${version.keycloak}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-adapter-spi</artifactId>
-			<version>${keycloak-core.version}</version>
+			<version>${version.keycloak}</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -333,19 +322,19 @@
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-core</artifactId>
-			<version>${keycloak-core.version}</version>
+			<version>${version.keycloak}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-admin-client</artifactId>
-			<version>${keycloak-core.version}</version>
+			<version>${version.keycloak}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-services</artifactId>
-			<version>${keycloak-core.version}</version>
+			<version>${version.keycloak}</version>
 			<scope>provided</scope>
 		</dependency>
 
